<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevosAlumnos"
    android:orientation="vertical"
    android:background="@color/md_black_1000">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reg"
        android:textColor="@color/md_green_800"
        android:textSize="30dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nombAl"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/md_yellow_700"
                android:layout_gravity="center"
                android:focusedByDefault="true"
                android:textColor="@color/md_yellow_700"/>
            <EditText
                android:id="@+id/ap1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ap1"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/md_yellow_700"
                android:layout_gravity="center"
                android:focusedByDefault="true"
                android:textColor="@color/md_yellow_700"/>
            <EditText
                android:id="@+id/ap2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ap2"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/md_yellow_700"
                android:layout_gravity="center"
                android:focusedByDefault="true"
                android:textColor="@color/md_yellow_700"/>
            <EditText
                android:id="@+id/edad1"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/edad"
                android:inputType="number"
                android:textColorHint="@color/md_yellow_700"
                android:textColor="@color/md_yellow_700"/>
            <EditText
                android:id="@+id/tfono"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/tel"
                android:inputType="number"
                android:textColorHint="@color/md_yellow_700"
                android:textColor="@color/md_yellow_700"/>
            <EditText
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/md_yellow_700"
                android:layout_gravity="center"
                android:textColor="@color/md_yellow_700"/>

            <EditText
                android:id="@+id/planp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/plantel"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/md_yellow_700"
                android:layout_gravity="center"
                android:textColor="@color/md_yellow_700"/>
            <EditText
                android:id="@+id/carrcursa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/carCur"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/md_yellow_700"
                android:layout_gravity="center"
                android:textColor="@color/md_yellow_700"/>
            <EditText
                android:id="@+id/semc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/sem"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/md_yellow_700"
                android:layout_gravity="center"
                android:inputType="number"
                android:textColor="@color/md_yellow_700"/>
            <EditText
                android:id="@+id/cari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/carrerain"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/md_yellow_700"
                android:layout_gravity="center"
                android:textColor="@color/md_yellow_700"/>


            <Button
                android:id="@+id/btnAgregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/butons"
                android:layout_marginTop="20dp"
                android:text="@string/sen"
                android:textColor="@color/md_yellow_700"/>
            <Button
                android:id="@+id/btnlimpiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/butons"
                android:layout_marginTop="20dp"
                android:text="@string/cln"
                android:textColor="@color/md_yellow_700"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>